# cbd-client

./: .autotools  .cproject  .gitignore  .project  Makefile.am  README.md  autogen.sh  configure.ac
amzn1/: cbd-client.spec
debian/: cbd-client.NEWS  cbd-client.init.d  cbd-client.initramfs-hook  cbd-client.initrd  cbd-client.install  cbd-client.links  cbd-client.lintian-overrides  cbd-client.manpages  cbd-client.postinst  changelog  rules
doc/: Doxyfile.in
man/: Makefile.am  NBD-CLIENT.8  NBDTAB.5  cbd-client.8.in.sgml  cbdtab.5.in.sgml
package/: amzn2
package/amzn1/: cbd-client.spec
package/el7/: cbd-client.spec
package/el7.centos/: cbd-client.spec
package/trusty/: cbd-client.NEWS  cbd-client.cbddisks.init  cbd-client.install  cbd-client.lintian-overrides  cbd-client.postinst  cbd-client.preinst  changelog.in  control  copyright  rules
package/xenial/: cbd-client.cbddisks.init  cbd-client.install  cbd-client.links  cbd-client.postinst  cbd-client.systemd-extra  changelog  changelog.in  control  rules
src/: Makefile.am  cbd-client.c  cliserv.c  cliserv.h  nbd-client.c  nbd.h
support/: genver.sh
sysconf/: Makefile.am
sysconf/init.d/: Makefile.am  cloudbd
system/: .gitignore  99-cbd.rules.tmpl  Makefile.am  aws.conf.sample  cbd.conf  cbd_dmsetup.tmpl  cbd_id.tmpl  cbddisks.tmpl  cbddisks_start.tmpl  cbddisks_stop.tmpl  cbdsetup-generator.tmpl  cbdsetup-pre.target  cbdsetup.functions.tmpl  cbdsetup.target  cbdsetup.target.tmpl  cbdsetup@.service.tmpl  cbdtab  cloudbd.completion.tmpl  gcs.conf.sample  openstack-keystone-v2.conf.sample  openstack-keystone-v3.conf.sample  openstack-swiftstack.conf.sample  sh.tmpl  systemd-cbdsetup.tmpl
system/tmp/lib/udev/rules.d/: 99-cbd.rules
system/tmp/usr/local/etc/cloudbd/: cbdtab
system/tmp2/lib/systemd/system/: cbdsetup.target
systemd/: .gitignore  Makefile.am  cbd@.service.sh.in
udev/: 99-cbd.rules  Makefile.am  cloudbd_id  cloudbd_id.in
xenial/: cbd-client.NEWS  cbd-client.cbdtab  cbd-client.dirs  cbd-client.init.d  cbd-client.install  changelog  control  rules
